# asgimachine

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: comparison.md  examples.md  index.md  quickstart.md  reference.md  when-to-use.md
docs/adr/: 0001-keep-starlette-substrate.md
docs/concepts/: build-model-rent.md  decision-graph.md  flowchart.md  lifespan.md  negotiation.md  observability.md  resources.md  two-lanes.md  webmachine-coverage.md
docs/guides/: authorization.md  conditional-caching.md  content-negotiation.md  database-connection.md  openapi.md  path-parameters.md  query-string.md  rate-limiting.md  request-body.md  response-outcomes.md  streaming.md
examples/: accounts.py  connection.py  events.py  feed.py  notes_app.py  unpoly.py
src/asgimachine/: __init__.py  auth.py  codec.py  command.py  conditional.py  core.py  event.py  http.py  negotiation.py  policy.py  resource.py  schema.py  streaming.py  testing.py  trace.py
src/asgimachine/substrate/: __init__.py  starlette.py
tests/: conftest.py  test_accepted.py  test_allowed_methods.py  test_apply.py  test_auth.py  test_body_limit.py  test_codec.py  test_command.py  test_conformance_v0.py  test_connection_example.py  test_cors.py  test_error_body.py  test_event.py  test_feed.py  test_graph_coverage.py  test_header_validation.py  test_import_isolation.py  test_lifespan.py  test_missing_branch.py  test_multiple_choices.py  test_negotiation.py  test_node_coverage.py  test_notes_app.py  test_on_exception.py  test_parser_guards.py  test_policy.py  test_precondition_required.py  test_preconditions.py  test_query_params.py  test_rate_limit.py  test_retry_after.py  test_schema.py  test_serve_anyway.py  test_streaming.py  test_streaming_disconnect.py  test_trace.py  test_unpoly.py  test_v4_status.py  test_variant_negotiation.py  test_write_path.py
