[project]
name = "asgimachine"
version = "0.0.0"
description = "A webmachine-style HTTP decision-graph framework for Python."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Charles Yeomans" }]
dependencies = [
    "starlette>=0.37",
    "anyio>=4",
    "abnf>=2.5.1",
]

[project.urls]
Homepage = "https://github.com/declaresub/asgimachine"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "httpx>=0.27",
    "pyright>=1.1.411",
    "uvicorn>=0.30",
    "pydantic>=2",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asgimachine"]

[tool.ruff]
src = ["src", "tests", "examples"]
target-version = "py313"

[tool.ruff.lint]
# Rule set per PLAN.md §3. E501 (line length) is deliberately off.
select = ["F", "E", "UP", "ASYNC", "BLE", "COM", "C4", "T20", "RUF", "ISC"]
# COM812 / ISC001 conflict with the ruff formatter; E501 disabled by design.
ignore = ["E501", "COM812", "ISC001"]

[tool.pyright]
include = ["src", "examples", "tests"]
pythonVersion = "3.13"
# Library code is held to strict; tests stay at standard — the TestClient/fixture
# surface is loosely typed upstream and not worth annotating exhaustively.
typeCheckingMode = "standard"
strict = ["src", "examples"]
# Resolve imports against the uv-managed virtualenv (works under `uv run pyright`
# and for editors that read this config).
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=asgimachine --cov-report=term-missing"
filterwarnings = [
    # Starlette 1.3's TestClient nudges toward httpx2; httpx works fine for now.
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]
